--- a/pong.html
+++ b/pong.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>Pong - Three.js R78</title>
-	
+	<meta name="author" content="Talisson Galho">
+	<meta name="description" content="Implementação do jogo Pong para estudar Three.js">
 	<script src="pongGraphics.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/threejs/r78/three.min.js"></script>	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
