--- a/pong.html
+++ b/pong.html
@@ -50,7 +50,7 @@
 <body>
 	<div id="splash" class="container vertical-center col-xs-10 col-xs-offset-1">
 		<div id="jumbo" class="jumbotron  col-md-6 col-md-offset-3 col-xs-10 col-xs-offset-1">
-			<div id="splashPaused" class="row" style="display: none"><h1><spam class='glyphicon glyphicon-pause'></spam><br>Jogo pausado</h1></div>';
+			<div id="splashPaused" class="row" style="display: none"><h1><span class='glyphicon glyphicon-pause'></span><br>Jogo pausado</h1></div>';
 			<div id='rows'>
 				<div class="row">
 					<h1>PONG</h1>
@@ -58,7 +58,7 @@
 				<div class="row">
 					<h1>Three.js</h1>
 				</div>
-				<h3><btn class="btn btn-primary" onClick="run()"><bold>INICIAR <spam class="glyphicon glyphicon-play"></bold></btn></h3>
+				<h3><button class="btn btn-primary" onClick="run()"><bold>INICIAR <span class="glyphicon glyphicon-play"></span></bold></button></h3>
 			</div>
 		</div>
 
