--- a/pong.html
+++ b/pong.html
@@ -8,44 +8,11 @@
 	<title>Pong - Three.js R78</title>
 	<meta name="author" content="Talisson Galho">
 	<meta name="description" content="Implementação do jogo Pong para estudar Three.js">
-	<script src="pongGraphics.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/threejs/r78/three.min.js"></script>	
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	 <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet"> 
-	<style type="text/css" media="screen">
-		body{
-			overflow: hidden;
-			background: rgb(33,204,157);
-			text-align: center;
-		}
-		div#bottomBar{
-			position: absolute;
-			bottom: 5vh;
-			width: 100vw;
-			text-align: center;
-		}
-		span.ShowPoint{
-			background: rgba(27,27,27,0.5);
-			width: 15vh;
-			border-radius: 25%;
-		    position: absolute;
-			top: 2%;
-		    z-index: 50;
-			font-size: 15vh;
-			font-weight: bold;
-			font-family: fantasy;
-		}
-		.vertical-center {
-  			position: absolute;
-  			top: 50vh;
-  			transform: translate(0,-50%);
-		}
-		.jumbotron{
-			font-family: Philosopher, sans-serif;
-			color: rgb(33,204,157);
-			background: linear-gradient(white,#CCCCCC);
-		}
-	</style>
+	<script src="./js/pongGraphics.js"></script>
+	<script src="./node_modules/three/build/three.min.js"></script>	
+	<link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+	<link href="./css/googleFonts.css" rel="stylesheet"> 
+	<link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
 	<div id="splash" class="container vertical-center col-xs-10 col-xs-offset-1">
@@ -58,12 +25,18 @@
 				<div class="row">
 					<h1>Three.js</h1>
 				</div>
-				<h3><button class="btn btn-primary" onClick="run()"><bold>INICIAR <span class="glyphicon glyphicon-play"></span></bold></button></h3>
+				<h3>
+					<button class="btn btn-primary" onClick="run()">
+						<bold>INICIAR
+							<span class="glyphicon glyphicon-play"></span>
+						</bold>
+					</button>
+				</h3>
 			</div>
 		</div>
-
 	</div>
-	<span class='ShowPoint' id='leftPad'></span><span class='ShowPoint' id='rightPad'></span>
+	<span class='showPoints' id='leftPad'></span>
+	<span class='showPoints' id='rightPad'></span>
 
 </body>
 </html>
